e-learning/files/1515004156error.txt
  File "files/1515004156main.py", line 2
    int main()
           ^
SyntaxError: invalid syntax
